feat(inventory): default account views to present lifecycle
